--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div id="dashboard" style="display:none;">
-    
+
     <!-- Cabeçalho: Título e Logo -->
 
     <div class="dashboard-container header-container" id="headerSection">
@@ -29,6 +29,7 @@
       <img id="logo" src="Logo.jpeg" alt="Logo">
     </div>
     <!-- Seção: Tabela de Clientes -->
+     
     <div class="dashboard-container" id="clientsTableSection">
       <h2>Tabela de Clientes</h2>
       <div id="clientTable"></div>
@@ -89,5 +90,36 @@
   <!-- Scripts: app.js deve ser carregado antes do whatsapp.js -->
   <script src="app.js"></script>
   <script src="whatsapp.js"></script>
+  <script src="https://sdk.mercadopago.com/js/v2">
+    const mp = new MercadoPago("MERCADOPAGO_ACCESS_TOKEN");
+
+    // Step 1: Import the parts of the module you want to use
+    import { MercadoPagoConfig, Payment } from 'mercadopago';
+
+// Step 2: Initialize the client object
+    const client = new MercadoPagoConfig({ accessToken: 'MERCADOPAGO_ACCESS_TOKEN', options: { timeout: 5000, idempotencyKey: 'abc' } });
+
+// Step 3: Initialize the API object
+    const payment = new Payment(client);
+
+// Step 4: Create the request object
+    const body = {
+	    transaction_amount: 12.34,
+	    description: '<DESCRIPTION>',
+	    payment_method_id: '<PAYMENT_METHOD_ID>',
+	    payer: {
+		  email: '<EMAIL>'
+	  },
+  };
+
+    // Step 5: Create request options object - Optional
+    const requestOptions = {
+	    idempotencyKey: '<IDEMPOTENCY_KEY>',
+  };
+
+    // Step 6: Make the request
+    payment.create({ body, requestOptions }).then(console.log).catch(console.log);
+  </script>
+
 </body>
 </html>
