--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,6 @@
     </div>
     <!-- Seção: Tabela de Clientes -->
      
-    <div class="dashboard-container" id="clientsTableSection">
-      <h2>Tabela de Clientes</h2>
-      <div id="clientTable"></div>
-    </div>
-
-    <!-- Seção: Formulário de Adição/Atualização de Cliente -->
     <div class="dashboard-container" id="clientFormSection">
       <h3>Adicionar Novo Cliente</h3>
       <label for="clientFullName">Nome Completo:</label>
@@ -66,10 +60,27 @@
       <button id="addPointsBtn">Adicionar Pontos</button>
     </div>
 
-    <!-- Seção: Exportar e Zerar Lista -->
-    <div class="dashboard-container" id="actionsSection">
-      <button id="exportBtn">Exportar Clientes</button>
-      <button id="resetClientsBtn">Zerar Clientes</button>
+    <section id="actionsSection" class="dashboard-container">
+      <input type="file" id="fileInput" accept=".json">
+      <button onclick="importClientes()">Importar Clientes</button>
+    </section>
+    
+    <!-- Seção: Tabela de Clientes (Agora Está Abaixo do Formulário) -->
+    <div id="clientTableContainer">
+      <table id="clientTable">
+        <thead>
+          <tr>
+            <th>Nome Completo</th>
+            <th>Email</th>
+            <th>Telefone</th>
+            <th>Pontos</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody id="clientTableBody">
+          <!-- Clientes serão inseridos aqui via JavaScript -->
+        </tbody>
+      </table>
     </div>
 
     <!-- Seção: Clientes com 10 Pontos -->
