ajuste nos recarregar a pagina

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 
   <!-- Dashboard (inicialmente oculto) -->
   <div id="dashboard" style="display:none;">
+
+    <button id="logoutBtn" style="position: fixed; top: 20px; right: 20px;">Sair</button> <br>
     <!-- Cabeçalho: Título e Logo -->
     <div class="dashboard-container header-container" id="headerSection">
       <h1>Cartão Fidelidade</h1>
