--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <!-- Cabeçalho: Título e Logo -->
     <div class="dashboard-container header-container" id="headerSection">
       <h1>Cartão Fidelidade</h1>
+      <img id="logo" src="Logo.jpeg" alt="Logo">
     </div>
 
     <!-- Seção: Formulário para Adicionar Novo Cliente -->
