--- a/public/payment.html
+++ b/public/payment.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Renove sua assinatura</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="container">
     <h1>Assinatura expirada</h1>
     <p>Para continuar usando o sistema, clique no botão abaixo e faça o pagamento.</p>
     <a href="https://mpago.la/1Mc6Lnc" class="btn">Pagar Agora</a>
+    <p>apos o pagamento, enviar o comporvante para esse contato abaixo </p> <br>
+    <p>
+        &copy; Douglas Moraes Dev <br>
+        <a href="https://wa.me/qr/F2Z744R5KWEPB1" target="_blank">Contato</a>
+      </p>
   </div>
 </body>
 </html>
