atualizção pagina de pagamento

--- a/public/payment.html
+++ b/public/payment.html
@@ -85,4 +85,15 @@
     <p>Para continuar usando o sistema, clique no botão abaixo e faça o pagamento.</p>
     <a href="https://mpago.la/1Mc6Lnc" class="btn">Pagar Agora</a>
 
-    <p>Após o pagamento, por favor <strong>envie o comprovante</strong>
+    <p>Após o pagamento, por favor <strong>envie o comprovante</strong> pelo WhatsApp:</p>
+    <a href="https://wa.me/qr/F2Z744R5KWEPB1" class="btn contact-btn" target="_blank">
+      Enviar Comprovante
+    </a>
+
+    <footer>
+      &copy; Douglas Moraes Dev<br>
+      <a href="https://wa.me/qr/F2Z744R5KWEPB1" target="_blank">Contato via WhatsApp</a>
+    </footer>
+  </div>
+</body>
+</html>
