--- a/public/landing.html
+++ b/public/landing.html
@@ -105,7 +105,7 @@
     </section>
     <section class="cta">
       <p style="font-size:1.125rem; margin-bottom:1rem;">Teste 7 dias grátis. Após, R$ 15/mês.</p>
-      <a href="https://wa.me/qr/F2Z744R5KWEPB1" target="_blank" rel="noopener">SAIBA MAIS</a>
+      <a href="https://wa.me/qr/F2Z744R5KWEPB1" target="_blank" rel="noopener">Entre em contato para adquirir o aplicativo</a>
     </section>
     <footer>
       <p>&copy; 2024 BityLab. Todos os direitos reservados.</p>
