--- a/public/landing.html
+++ b/public/landing.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="logo/favicon.ico" type="image/x-icon">
   <title>Cartão Fidelidade Online BityLab</title>
   <style>
     body {
@@ -88,20 +89,48 @@
     </header>
     <section class="features">
       <div class="feature">
-        <img src="logo/cadastro.jpg" alt="Adicionar Novo Cliente">
+        <img src="logo/addCliente.png" alt="Adicionar Novo Cliente">
         <h3>Adicione Clientes</h3>
         <p>Cadastre novos clientes em segundos e comece a acumular pontos.</p>
       </div>
       <div class="feature">
-        <img src="logo/buscar clientes.jpg" alt="Salvar e Buscar Clientes">
+        <img src="logo/buscarCliente.png" alt="Salvar e Buscar Clientes">
         <h3>Gerencie Informações</h3>
         <p>Salve, busque e edite detalhes dos clientes facilmente.</p>
       </div>
+
       <div class="feature">
-        <img src="logo/qrcode para consultar pontos.jpg" alt="Consulta de Pontos via QR Code">
+        <img src="logo/consultarPontos.png" alt="Consulta de Pontos via QR Code">
         <h3>Consulta de Pontos</h3>
-        <p>Mostre o QR Code para seus clientes e confira seus pontos instantaneamente.</p>
+        <p>Mostre o QR Code ou envie o link para seus clientes e conferirem seus pontos instantaneamente.</p>
       </div>
+
+      <div class="feature">
+        <img src="logo/notificação.png" alt="Consulta de Pontos via QR Code">
+        <h3>Notificações</h3>
+        <p>Envie o voucher para seus clientes com 10 pontos.</p>
+      </div>
+
+      <div class="highlight-item">
+        <h3>Envio Automático de Vouchers</h3>
+        <p>Ao atingir 10 pontos, o cliente recebe automaticamente seu voucher diretamente no WhatsApp — sem custo extra.</p>
+      </div>
+
+    <div>
+         <h3>Layouts Padrão ou Personalizado</h3>
+         <p>Escolha nosso layout clássico ou, por apenas R$ 50, envie seu logo e deixe o cartão com a cara da sua marca.</p>
+      </div>
+
+       <div class="highlight-item">
+        <h3>Segurança em Nuvem</h3>
+        <p>Dados criptografados, backup automático e alta disponibilidade para você não se preocupar com nada.</p>
+      </div>
+
+      <div class="highlight-item">
+        <h3>Suporte Dedicado</h3>
+        <p>Nossa equipe está pronta para ajudar na configuração, personalização e tirar qualquer dúvida — tudo em português.</p>
+      </div>
+
     </section>
     <section class="cta">
       <p style="font-size:1.125rem; margin-bottom:1rem;">Teste 7 dias grátis. Após, R$ 15/mês.</p>
