--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="logo/icon.png">
 
   <!-- Fallback de favicon -->
-  <link rel="shortcut icon" href="logo/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="logo/icon.png" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="logo/icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="logo/icon.png">
 
