Reaplica alterações locais

--- a/public/landing.html
+++ b/public/landing.html
@@ -122,7 +122,7 @@
       <div class="feature">
         <img src="logo/consultarPontos.png" alt="Consulta de Pontos via QR Code">
         <h3>Consulta de Pontos</h3>
-        <p>Mostre o QR Code ou envie o link para seus clientes conferirem seus pontos instantaneamente.</p>
+        <p>Mostre o QR Code ou envie o link para seus clientes e conferirem seus pontos instantaneamente.</p>
       </div>
       <div class="feature">
         <img src="logo/notificação.png" alt="Notificações">
