--- a/public/landing.html
+++ b/public/landing.html
@@ -49,7 +49,7 @@
     header h1 {
       margin: 1rem 0 0.5rem;
       font-size: 2.5rem;
-      color: #ec008c;
+      color: #e72eff;
     }
     header p {
       font-size: 1.25rem;
@@ -73,7 +73,7 @@
     }
     .feature h3 {
       margin-bottom: 0.5rem;
-      color: #ec008c;
+      color: #e72eff;
     }
     .cta {
       text-align: center;
@@ -122,7 +122,7 @@
       <div class="feature">
         <img src="logo/consultarPontos.png" alt="Consulta de Pontos via QR Code">
         <h3>Consulta de Pontos</h3>
-        <p>Mostre o QR Code ou envie o link para seus clientes e conferirem seus pontos instantaneamente.</p>
+        <p>Mostre o QR Code ou envie o link para seus clientes conferirem seus pontos instantaneamente.</p>
       </div>
       <div class="feature">
         <img src="logo/notificação.png" alt="Notificações">
