--- a/public/landing.html
+++ b/public/landing.html
@@ -81,7 +81,7 @@
     }
     .cta a {
       display: inline-block;
-      background-color: #ec008c;
+      background-color: #e72eff;
       color: #ffffff;
       padding: 1rem 2rem;
       border-radius: 8px;
