--- a/public/landing.html
+++ b/public/landing.html
@@ -110,22 +110,22 @@
 
     <section class="features">
       <div class="feature">
-        <img src="logo/addCliente.png" alt="Adicionar Novo Cliente">
+        <img src="landingPage/addCliente.png" alt="Adicionar Novo Cliente">
         <h3>Adicione Clientes</h3>
         <p>Cadastre novos clientes em segundos e comece a acumular pontos.</p>
       </div>
       <div class="feature">
-        <img src="logo/buscarCliente.png" alt="Salvar e Buscar Clientes">
+        <img src="landingPage/buscarCliente.png" alt="Salvar e Buscar Clientes">
         <h3>Gerencie Informações</h3>
         <p>Salve, busque e edite detalhes dos clientes facilmente.</p>
       </div>
       <div class="feature">
-        <img src="logo/consultarPontos.png" alt="Consulta de Pontos via QR Code">
+        <img src="landingPage/consultarPontos.png" alt="Consulta de Pontos via QR Code">
         <h3>Consulta de Pontos</h3>
         <p>Mostre o QR Code ou envie o link para seus clientes conferirem seus pontos instantaneamente.</p>
       </div>
       <div class="feature">
-        <img src="logo/notificação.png" alt="Notificações">
+        <img src="landingPage/notificação.png" alt="Notificações">
         <h3>Notificações</h3>
         <p>Envie o voucher para seus clientes com 10 pontos.</p>
       </div>
