--- a/public/points.html
+++ b/public/points.html
@@ -11,43 +11,27 @@
     rel="stylesheet"
   />
 
+  <!-- seu CSS global que define todas as variáveis :root -->
+  <link rel="stylesheet" href="app.css" />
+
   <style>
-    :root {
-      /* valores padrão, serão sobrescritos */
-      --bg-gradient-from: #f0f4ff;
-      --bg-gradient-to:   #d9e8ff;
-      --container-bg:     #ffffffdd;
-      --text-color:       #333;
-      --heading-color:    #1a237e;
-      --button-bg:        #1a237e;
-      --button-text:      #fff;
-    }
-
-    *, *::before, *::after {
-      box-sizing: border-box;
-      margin: 0; padding: 0;
-    }
-
+    /* estilo específico da tela de pontos, aproveitando suas variáveis */
     body {
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(
-        135deg,
-        var(--bg-gradient-from) 0%,
-        var(--bg-gradient-to) 100%
-      );
-      height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
+      height: 100vh;
+      background-color: var(--background-color);
       color: var(--text-color);
+      font-family: 'Montserrat', sans-serif;
     }
 
     .points-container {
-      background: var(--container-bg);
-      padding: 2rem 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-      width: 90%;
+      background-color: var(--container-bg);
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: var(--box-shadow);
+      width: 100%;
       max-width: 360px;
       text-align: center;
     }
@@ -59,63 +43,38 @@
     }
 
     .points-container header h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      font-weight: 500;
-      color: var(--heading-color);
-    }
-
-    #pointsForm {
-      display: flex;
-      flex-direction: column;
+      color: var(--primary-color);
+      margin-bottom: 1rem;
     }
 
     #pointsForm input {
-      padding: 0.75rem 1rem;
-      font-size: 1rem;
-      border: 2px solid #ccc;
-      border-radius: 8px;
-      transition: border-color 0.2s ease;
-    }
-
-    #pointsForm input:focus {
-      border-color: var(--heading-color);
-      outline: none;
+      width: 100%;
+      padding: 0.75rem;
+      margin-bottom: 1rem;
+      border: 1px solid var(--input-border);
+      border-radius: 4px;
+      background: var(--primary-color);
+      color: var(--text-color);
     }
 
     #pointsForm button {
-      margin-top: 1rem;
-      padding: 0.75rem 1rem;
-      font-size: 1rem;
-      font-weight: 500;
+      width: 100%;
+      padding: 0.75rem;
       background: var(--button-bg);
       color: var(--button-text);
       border: none;
-      border-radius: 8px;
+      border-radius: 4px;
       cursor: pointer;
-      transition: background 0.2s ease, transform 0.2s ease;
+      transition: transform var(--transition-speed);
     }
-
     #pointsForm button:hover {
       transform: translateY(-2px);
-      /* opcional: escurecer um pouco */
-      filter: brightness(0.9);
     }
 
     #result {
       margin-top: 1.5rem;
       font-size: 1.2rem;
-      font-weight: 500;
-      min-height: 1.5em;
-    }
-
-    @media (max-width: 400px) {
-      .points-container {
-        padding: 1.5rem 1rem;
-      }
-      .points-container header h1 {
-        font-size: 1.6rem;
-      }
+      font-weight: bold;
     }
   </style>
 </head>
@@ -123,7 +82,6 @@
 <body>
   <div class="points-container">
     <header>
-      <!-- logo será exibido aqui -->
       <img id="est-logo" alt="Logo do estabelecimento" />
       <h1 id="est-name">Consultar Pontos</h1>
     </header>
@@ -141,7 +99,6 @@
     <div id="result"></div>
   </div>
 
-  <!-- Carrega o script externo -->
   <script src="points.js"></script>
 </body>
 </html>
