--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="theme-color" content="#ffffff" id="theme-color-meta" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cartão Fidelidade</title>
 
   <!-- Cor da barra de status (Android Chrome) -->
-  <meta name="theme-color" content="#28a745">
-
+  <meta name="theme-color" content="#ffffff" id="theme-color-meta" />
   <!-- Manifest para permitir “Adicionar à Tela Inicial” -->
   <link rel="manifest" href="/manifest.json">
 
