--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cartão Fidelidade</title>
 
-  <!-- Manifest e PWA -->
   <link rel="manifest" href="/manifest.json" />
-  <link rel="icon"           href="logo/icon.png" sizes="192x192" />
-  <link rel="icon"           href="logo/icon.png" sizes="512x512" />
+  <link rel="icon" href="logo/icon.png" sizes="192x192" />
+  <link rel="icon" href="logo/icon.png" sizes="512x512" />
   <link rel="apple-touch-icon" href="logo/icon.png" sizes="180x180" />
-  <link rel="shortcut icon"    href="logo/icon.png" />
+  <link rel="shortcut icon" href="logo/icon.png" />
 
-  <!-- CSS global de variáveis e reset -->
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Oxanium:wght@200..800&display=swap"
-    rel="stylesheet"
-  />
+  <link rel="stylesheet" href="/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Oxanium:wght@200..800&display=swap" rel="stylesheet" />
 </head>
 <body>
   <!-- LOGIN -->
@@ -41,7 +34,7 @@
     <div class="dashboard-container header-container" id="headerSection">
       <div>
         <h1>Cartão Fidelidade</h1>
-        <p id="welcome-msg">Olá, Usuário!</p>
+        <p id="welcome-msg">Olá, <span id="user-name"></span>!</p>
       </div>
       <img id="logo" src="Logo.jpeg" alt="Logo" />
     </div>
@@ -84,6 +77,7 @@
         <button id="addPointsBtn">Adicionar Pontos</button>
       </div>
 
+      <!-- Tabela de Clientes restaurada ao padrão anterior -->
       <div id="clientTableContainer">
         <table id="clientTable">
           <caption>Tabela de Clientes</caption>
@@ -125,17 +119,19 @@
   </div>
 
   <footer>
-    <p>
-      &copy; Douglas Moraes Dev<br />
-      <a href="https://wa.me/qr/F2Z744R5KWEPB1" target="_blank">Contato</a>
-    </p>
+    <p>&copy; Douglas Moraes Dev<br /><a href="https://wa.me/qr/F2Z744R5KWEPB1" target="_blank">Contato</a></p>
   </footer>
 
   <!-- Scripts -->
   <script src="app.js"></script>
   <script>
-    // Controle de abas
+    // Controle de abas e saudação
     document.addEventListener('DOMContentLoaded', () => {
+      // saudação com nome real (presume-se que app.js salve em localStorage 'userName')
+      const storedName = localStorage.getItem('userName') || '';
+      if (storedName) document.getElementById('user-name').textContent = storedName;
+
+      // abas
       const tabs = document.querySelectorAll('.tab-menu button');
       tabs.forEach(btn => {
         btn.addEventListener('click', () => {
